--- a/static/index.html
+++ b/static/index.html
@@ -10,14 +10,15 @@
     <div class="left">
       <button id="btnZoomIn">+</button>
       <button id="btnZoomOut">−</button>
+      <button id="btnFit">Show all</button>
       <button id="btnReset">Reset</button>
-      <label class="zoom-label">Масштаб:
+      <label class="zoom-label">Zoom:
         <input id="zoomSlider" type="range" min="0.1" max="10" step="0.01" value="1">
         <span id="zoomValue">1.00×</span>
       </label>
     </div>
     <div class="right">
-      <button id="btnCollapseAll">Свернуть все</button>
+      <button id="btnCollapseAll">collapse all</button>
       <button id="btnExpandAll">Развернуть все</button>
     </div>
   </div>
