--- a/static/index.html
+++ b/static/index.html
@@ -1,33 +1,41 @@
 <!doctype html>
 <html lang="ru">
 <head>
-<meta charset="utf-8" />
-<title>Timeline Viewer</title>
-<link rel="stylesheet" href="styles.css" />
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Timeline — High Performance Viewer</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="controls">
-    <div class="left">
+  <div class="topbar">
+    <div class="controls-left">
       <button id="btnZoomIn">+</button>
       <button id="btnZoomOut">−</button>
-      <button id="btnFit">Show all</button>
       <button id="btnReset">Reset</button>
-      <label class="zoom-label">Zoom:
-        <input id="zoomSlider" type="range" min="0.1" max="10" step="0.01" value="1">
+      <button id="btnFit">Fit</button>
+      <label>Масштаб
+        <input id="zoomSlider" type="range" min="0.05" max="10" step="0.01" value="1">
         <span id="zoomValue">1.00×</span>
       </label>
+      <label>Горизонталь
+        <input id="panXSlider" type="range" min="0" max="0" step="1" value="0" />
+        <span id="panXValue">0 px</span>
+      </label>
     </div>
-    <div class="right">
-      <button id="btnCollapseAll">collapse all</button>
+
+    <div class="controls-right">
+      <button id="btnCollapseAll">Свернуть все</button>
       <button id="btnExpandAll">Развернуть все</button>
+      <input id="fileInput" type="file" accept=".json,.trace,.txt,.csv" />
     </div>
   </div>
 
   <div id="svg-container">
-    <!-- SVG будет создан динамически в renderer.js -->
+    <canvas id="mainCanvas"></canvas>
+    <canvas id="rulerCanvas" class="overlay"></canvas>
+    <canvas id="minimap" class="overlay"></canvas>
+    <div id="tooltip" class="tooltip" style="display:none"></div>
   </div>
-
-  <div id="tooltip" class="tooltip" style="display:none;"></div>
 
 <script src="renderer.js"></script>
 </body>
